<resources>
    <string name="app_name">Testing_Firebase_auth</string>
    <string name="sign_up_button_label">Sign Up</string>
    <string name="sign_in_button_label">Sign In</string>
    <string name="validate_email_button_label">Validate email</string>
    <string name="validate_account_button_label">Validate account</string>
    <string name="update_account_button_label">Update account</string>
    <string name="sign_out_button_label">Sign Out</string>
    <string name="delete_account_button_label">Delete account</string>
    <string name="reset_password_button_label">Reset password</string>
    <string name="information_text_label">Information text</string>
    <string name="send_data_button_label">Send data</string>
    <string name="read_data_button_label">Read data</string>
    <string name="data_text_label">Data</string>
    <string name="invalidate_account">Invalidate Account</string>
    <string name="update_password">Update Password</string>
</resources>
